--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,5 @@
 <nav>
+  <link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/assets/images/favicon.ico">﻿
   <ul class="navigation-list">
     {% assign pages_list = site.html_pages | sort:"nav_order" %}
     {% for node in pages_list %}
