change equations to use MathJax
MathURL was a little too low resolution for mobile devices.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,9 @@
     gtag('config', 'UA-131194255-1');
   </script>
 
+  <!-- Include MathJax -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+
   <title>{{ page.title }} - {{ site.title }}</title>
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
   {% if site.search_enabled != nil %}
