--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -101,8 +101,10 @@ li {
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
 }
 
 hr {
