--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -46,7 +46,7 @@
       margin-top: 0.3em;
       margin-left: -0.8em;
       color: rgba($body-text-color, 0.3);
-      content: "- ";
+      content: "> ";
     }
 
     &.active {
