--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
 
   <title>{{ page.title }} - {{ site.title }}</title>
+  <meta name="description" content="Learn robotics in a simple and intuitive way.">
+  <meta name="keywords" content="robotics,education,frc,first,programming,engineering">
+
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
   {% if site.search_enabled != nil %}
   <script type="text/javascript" src="{{ "/assets/js/vendor/lunr.min.js" | absolute_url }}"></script>
