--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,13 @@
     gtag('config', 'UA-131194255-1');
   </script>
 
-  <!-- Include MathJax -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+  <!-- Load jQuery -->
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+  <!-- Load KaTeX -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js" ></script>
+
 
   <title>{{ page.title }} - {{ site.title }}</title>
   <meta name="description" content="Learn robotics in a simple and intuitive way.">
