update website keywords

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,12 +16,12 @@
 
   <!-- Load KaTeX -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js" ></script>
+  <script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js"></script>
 
 
   <title>{{ page.title }} - {{ site.title }}</title>
   <meta name="description" content="Learn robotics in a simple and intuitive way.">
-  <meta name="keywords" content="robotics,education,frc,first,programming,engineering">
+  <meta name="keywords" content="robotics,education,frc,technology,programming,engineering">
 
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
   {% if site.search_enabled != nil %}
