--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         {% include nav.html %}
       </div>
       <footer role="contentinfo" class="site-footer">
-        <p class="text-small text-grey-dk-000 mb-5">This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.</p>
+        <p class="text-small text-grey-dk-000 mb-5 text-center">Using <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>.</p>
       </footer>
     </div>
     <div class="main-content-wrap">
