replace ">" with "•" in nav

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 //
 // Main nav, breadcrumb, etc...
 //
@@ -46,7 +47,7 @@
       margin-top: 0.3em;
       margin-left: -0.8em;
       color: rgba($body-text-color, 0.3);
-      content: "> ";
+      content: "• ";
     }
 
     &.active {
