--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,11 +13,11 @@
   <meta name="description" content="Learn robotics in a simple and intuitive way.">
   <meta name="keywords" content="robotics,education,frc,technology,programming,engineering">
 
-  <link rel="stylesheet" href="/assets/css/just-the-docs.css">
+	<link rel="stylesheet" href="{{site.baseurl}}/assets/css/just-the-docs.css">
   {% if site.search_enabled != nil %}
-  <script type="text/javascript" src="/assets/js/vendor/lunr.min.js"></script>
+  <script type="text/javascript" src="{{site.baseurl}}/assets/js/vendor/lunr.min.js"></script>
   {% endif %}
-  <script type="text/javascript" src="/assets/js/just-the-docs.js"></script>
+  <script type="text/javascript" src="{{site.baseurl}}/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
